Add confetti page

--- a/Particle.Maui.csproj
+++ b/Particle.Maui.csproj
@@ -64,7 +64,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="ParticleSystem\" />
+	  <MauiXaml Update="Pages\ConfettiPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
